everything is alright

--- a/ongoing/index.html
+++ b/ongoing/index.html
@@ -59,6 +59,34 @@
 								</div>
 						</div>
 
+
+						<div id="content">
+							<h3 style="float: right; right: 4px;">PortaVoltex</h3>
+							<p>12/23/20</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								a portable k-shoot mania/sound voltex type game controller, using keyboard switches and some knobs that hopefully work </ol>
+									<div class="label">
+								<p><a href="/projects/portavoltex">Read More</a></p>
+							</div>
+						</div>						
+				
+						<div id="content">
+							<h3 style="float: right; right: 4px;">Video Deck</h3>
+							<p>12/24/20</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								a video editing deck to hopefully help me be more productive in after effects, using a teensy lc, keyboard switches, 
+								and some encoders
+								</ol>
+								<div class="label">
+								<p><a href="/projects/videodeck">Read More</a></p>
+							</div>
+						</div>						
+				
+
+
+
 						<div id="content">
 							<h3 style="float: right; right: 4px;">Merged Dactyl</h3>
 							<p>12/22/20</p>
@@ -120,7 +148,7 @@
 							<p>-----</p>
 							<ol class="playlist_info">
 								<li class="rr">
-								pi cam pi cam pi cam pi cam pi cam pi cam pi cam pi cam</ol>
+								the hub for projects that are only in the brainstorming stages</ol>
 							<div class="label">
 								<p><a href="/projects/potentials">Read More</a></p>
 							</div>
