--- a/projects/3dmodel/index.html
+++ b/projects/3dmodel/index.html
@@ -115,8 +115,18 @@
                 </p>
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/3dmodl/14.png" width="500px">
                 <p>i believe this showcases what i learned well enough and since im just going to redo it,
-                  how bout heading back to the  <a href="https://relivesight.com/ongoing/3dmodel">merged dactyl page</a>?
+                  how bout heading back to the  <a href="https://relivesight.com/projects/mergeddactyl">merged dactyl page</a>?
                 </p>
+
+                <h1>Log 6: Outsourcing</h1>
+                <p>not that it is particularly necessary to mention it, but i thought it best to keep track of all the modelling that happens,
+                  i moddeled a sdvx controller over at the <a href="https://relivesight.com/projects/portavoltex">portavoltex page</a>, here's some pics:
+                </p>
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/12.png" width="500px">
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/13.png" width="500px">
+                <p>additionally, all modelling for the laptopkeeb will take place on the <a href="https://relivesight.com/projects/laptopkeeb">laptopkeeb page</a>
+                from now on, here's a preview: </p>
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/5.png" width="500px">
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
