--- a/projects/laptopkeeb/index.html
+++ b/projects/laptopkeeb/index.html
@@ -67,6 +67,12 @@
           <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/3.jpeg" width="500px">
           <p>i would love to be done now, but i ventured to make a keyboard that could clip onto a laptop, so i intend to complete that, wish me luck again~</p>
 
+          <h1>Log 2: Clipping Out of Bounds</h1>
+          <p>on the <a href="https://relivesight.com/projects/3dmodel">3d modelling learning page</a> i worked a bit on this project, but i'm continuing it here.
+          here's the new clip design that hopefully will sucessfully attach to the keyboard:</p>
+          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/5.png" width="500px">
+          <p>can't really know until i print it...</p>
+
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
