--- a/projects/mergeddactyl/index.html
+++ b/projects/mergeddactyl/index.html
@@ -43,14 +43,14 @@
             
               <h1>Log 1: Professional Modelling</h1>
              <p>modelling is the brunt of this project, so until its done catch progress over at: the
-              <a href="https://relivesight.com/ongoing/3dmodel">3d modelling learning page</a>, in the meantime, we can check out the
+              <a href="https://relivesight.com/projects/3dmodel">3d modelling learning page</a>, in the meantime, we can check out the
               settings i used for the dactyl generator found  <a target="_blank" href=" https://dactyl.siskam.link/">here</a>:
              </p>
              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/1.png" width="500px">
              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/2.png" width="500px">
 
              <h1>Log 2: Anddddd, We're Back!</h1>
-             <p>assuming you definitely read the progess i made on the  <a href="https://relivesight.com/ongoing/3dmodel">3d modelling learning page</a>
+             <p>assuming you definitely read the progess i made on the  <a href="https://relivesight.com/projects/3dmodel">3d modelling learning page</a>
             we are redoing all the work that happened there, but this time with manifold geometry. so first things first, i gotta figure out how to make the generated dactyl's manifold.
           after some testing, it looks like after each half is generated they are able to be printed, but importing them into blender shows they are full of non-manifold issues,
         and using "clean up" does not work... not entirely sure how to proceed.</p>
