--- a/re/side.html
+++ b/re/side.html
@@ -31,6 +31,8 @@
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
+    <li><a href="https://relivesight.com/projects/portavoltex/">portavoltex</a></li>
+    <li><a href="https://relivesight.com/projects/videodeck/">videodeck</a></li>
     <li><a href="https://relivesight.com/projects/mergeddactyl/">mergeddactyl</a></li>
     <li><a href="https://relivesight.com/projects/laptopkeeb/">laptopkeeb</a></li>
   <li><a href="https://relivesight.com/projects/3dmodel/">3d modelling</a></li>
