--- a/concept/index.html
+++ b/concept/index.html
@@ -47,7 +47,7 @@
 
         <div id="content">
             <p>
-               Pages that have been pushed down into the conceptual abyss end up here. More specifically: pages i still like but have long since overstayed there due on the homepage.
+               pages that have been pushed down into the conceptual abyss end up here. more specifically: pages i still like but have long since overstayed there due on the homepage.
             </p>
         </div>
 				<div id="content2">
@@ -63,17 +63,25 @@
                         <div id="ccontent">
                             <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/2.png" style="width: 160px;"/>
                             <br><br><h3>Old Blog</h3>            <ol class="playlist_info">
-                                <li>the old aesthetic blog <</li><br>
+                                <li>the old aesthetic blog</li><br>
                             </ol>
                             <a href="/concept/blog/" class="label3">CLICK TO SEE</a>
 
                     </div>
 
+                    <div id="ccontent">
+                        <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/5.png" style="width: 160px;"/>
+                        <br><br><h3>Art Page</h3>            <ol class="playlist_info">
+                            <li>just don't like it much</li><br>
+                        </ol>
+                        <a href="/art/" class="label3">CLICK TO SEE</a>
+
+                </div>
 
                     <div id="ccontent">
                         <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/1.png" style="width: 160px;"/>
                         <br><br><h3>Chat Room</h3>            <ol class="playlist_info">
-                            <li>it still functions entirely <</li><br>
+                            <li>it still functions entirely</li><br>
                         </ol>
                         <a href="/concept/chat/" class="label3">CLICK TO SEE</a>
 
@@ -83,7 +91,7 @@
                 <div id="ccontent">
                     <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/3.png" style="width: 160px;"/>
                     <br><br><h3>Concept</h3>            <ol class="playlist_info">
-                        <li>page from the old site <</li><br>
+                        <li>page from the old site</li><br>
                     </ol>
                     <a href="/concept/concept/" class="label3">CLICK TO SEE</a>
 
@@ -93,7 +101,7 @@
             <div id="ccontent">
                 <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/4.png" style="width: 160px;"/>
                 <br><br><h3>Coming Soon</h3>            <ol class="playlist_info">
-                    <li>the coming soon page <</li><br>
+                    <li>the coming soon page</li><br>
                 </ol>
                 <a href="/concept/ucc/" class="label3">CLICK TO SEE</a>
 
