--- a/re/side.html
+++ b/re/side.html
@@ -26,7 +26,7 @@
 <a href="https://relivesight.com/artlogs/">Art Logs</a>
   <ul>
   <li><a href="https://relivesight.com/manga/">manga</a></li>
-  <li><a href="https://relivesight.com/art/">my art</a></li>
+  <li><a href="https://relivesight.com/art/">my "art"</a></li>
   <li><a href="https://relivesight.com/spam/">spam</a></li>
   </ul>
 <a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
