--- a/art/draws/index.html
+++ b/art/draws/index.html
@@ -76,12 +76,9 @@
 
 		<div id="ccontent">
             <img src="../../images/art/draws/3.0.png"style="width: 664px;"/>
-						<br><br><h3>Some Attempts</h3>            <ol class="playlist_info">
+						<br><br><h3>Some Attempt</h3>            <ol class="playlist_info">
 							<li>im learning to draw ~ ehhhhh <</li><br>
-            <img src="../../images/art/draws/1.0.png"style="width: 204px;"/>
-						<img src="../../images/art/draws/2.png"style="width: 204px;"/>
-						<img src="../../images/art/draws/4.0.png"style="width: 204px;"/>
-						<li>the leftmost attempt is my current profile pic uwu <</li><br>
+            <br>
 </ol>
 
         </div>
