--- a/video/index.html
+++ b/video/index.html
@@ -61,41 +61,42 @@
                         <div id="ccontent">
                             <img class="auditorium" src="../images/video/pfp3.png" style="width: 160px;"/>
                                         <br><br><h3>Analog United</h3>            <ol class="playlist_info">
-                                            <li>join the force of the future today <</li><br>
+                                            <li>join the force of the future today</li><br>
                             </ol>
-                                        <a target="_blank" href="https://www.youtube.com/channel/UCLTvHT8mBiOcKTqnqOFrBtg"  class="label3">CLICK TO SEE VIDEO</a>
+                                        <a target="_blank" href="https://www.youtube.com/channel/UCLTvHT8mBiOcKTqnqOFrBtg"  class="label3">CLICK TO SEE</a>
                         </div>
 
 
                         <div id="ccontent">
                             <img class="auditorium" src="../images/video/8.jpg" style="width: 160px;"/>
                                         <br><br><h3>Anime Edits</h3>            <ol class="playlist_info">
-                                            <li>after effects - insta <</li><br>
+                                            <li>after effects - insta</li><br>
                             </ol>
-                                        <a target="_blank" href="https://www.instagram.com/omnisai.ren/"  class="label3">CLICK TO SEE VIDEO</a>
+                                        <a target="_blank" href="https://www.instagram.com/omnisai.ren/"  class="label3">CLICK TO SEE</a>
                         </div>
 
                         <div id="ccontent">
-                            <img class="auditorium" src="../images/video/or-6.png" style="width: 160px;"/>
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/video/1.png" style="width: 160px;"/>
                                         <br><br><h3>Omnisai Ren</h3>            <ol class="playlist_info">
-                                            <li>reposts from my insta and maybe other vids <</li><br>
+                                            <li>my edits and sometimes other vids</li><br>
                             </ol>
-                                        <a target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw"  class="label3">CLICK TO SEE VIDEO</a>
+                                        <a target="_blank" href="https://www.youtube.com/channel/UCaw9NyNvudFpHxljwC_Xlmw"  class="label3">CLICK TO SEE</a>
+                        </div>
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/video/2.png" style="width: 160px;"/>
+                                        <br><br><h3>Streaming</h3>            <ol class="playlist_info">
+                                            <li>my twitch channel - where i rarely stream</li><br>
+                            </ol>
+                                        <a target="_blank" href="https://www.twitch.tv/omnisairen"  class="label3">CLICK TO SEE</a>
                         </div>
                         <div id="ccontent">
                             <img class="auditorium" src="../images/video/or-5.png" style="width: 160px;"/>
                                         <br><br><h3>Omnisai Runs</h3>            <ol class="playlist_info">
-                                            <li>full vods from twitch - how cringe <</li><br>
+                                            <li>full vods from twitch - how cringe</li><br>
                             </ol>
-                                        <a target="_blank" href="https://www.youtube.com/channel/UCo0hyzT-5C7vLcC7GBJ9asw"  class="label3">CLICK TO SEE VIDEO</a>
+                                        <a target="_blank" href="https://www.youtube.com/channel/UCo0hyzT-5C7vLcC7GBJ9asw"  class="label3">CLICK TO SEE</a>
                         </div>
-                        <div id="ccontent">
-                            <img class="auditorium" src="../images/video/twit5.png" style="width: 160px;"/>
-                                        <br><br><h3>Streaming</h3>            <ol class="playlist_info">
-                                            <li>my twitch channel <</li><br>
-                            </ol>
-                                        <a target="_blank" href="https://www.twitch.tv/omnisairen"  class="label3">CLICK TO SEE VIDEO</a>
-                        </div>
+                        
 
 <!-- 
                         <div id="ccontent">
