--- a/projects/mergeddactyl/index.html
+++ b/projects/mergeddactyl/index.html
@@ -91,6 +91,22 @@
             <p>preview (it fits):</p>
             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/17.png" width="500px">
 
+            <h1>Log 3: It's Cold Outside</h1>
+            <p>printing time!:</p>
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/2.jpeg" height="300px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/18.png" height="300px">
+
+            <p>and then i had to take a million supports off:</p>
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/4.jpeg" width="300px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/5.jpeg" width="300px">
+            <p>then i added threaded inserts:</p>
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/6.jpeg" width="500px">
+            <p>i sanded it down a bit but i cant paint it because of weather conditions right now so... yeah.. </p>
+
+
+
+
+
 
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
