--- a/projects/portavoltex/index.html
+++ b/projects/portavoltex/index.html
@@ -54,7 +54,7 @@
             <p>things i used (links to specific ones): </p>
             <ul>
               <li>arduino pro micro</li>
-              <li><a target="_blank" href="https://pastebin.com/03DZvKTi">arduino code</a></li>
+              <li><a target="_blank" href="https://pastebin.com/03DZvKTi">(quite awful) arduino code</a></li>
               <li>8x mx keyboard switches</li>
               <li>8x keycaps - (6x 1u, other 2 are up to you, but i used 1.75u)</li>
               <li><a target="_blank" href="https://www.thingiverse.com/thing:4700454">3d printed case and knobs i designed</a></li>
