--- a/mobile/index.html
+++ b/mobile/index.html
@@ -49,7 +49,6 @@
       <img src="../images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
         
         <a href="/manga" class="navi"><img src="../images/nav/flow.png">manga</a>
-        <a href="/art" class="navi"><img src="../images/nav/flow.png">art</a>
         <a href="/video" class="navi"><img src="../images/nav/flow.png">video</a>
         <a href="/book" class="navi"><img src="../images/nav/flow.png">book</a>
         <a href="/spam" class="navi"><img src="../images/nav/flow.png">spam</a>
@@ -80,6 +79,13 @@
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
  
+        
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">12/25/20 </h3>
+          <p style="margin-bottom:30px;">:anatomical_heart: meri krizms, or alternatively: hepi halliedys</p>
+        </div>
+
+
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/05/20 </h3>
           <p style="margin-bottom:30px;">the sound of a dissonant melody... ┈wait thats just christmas music ;</p>
