--- a/404/404.html
+++ b/404/404.html
@@ -34,8 +34,8 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    background-color: #250035;
-    color: #c414b5;
+    background-color: black;
+    color: #84000f;
     font-size: calc(6.4px + 0.8125vw);
   }
 
@@ -52,7 +52,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #5a0084;
+    background-color: #84000f;
     mix-blend-mode: overlay;
     z-index: 1;
   }
@@ -96,7 +96,7 @@
     margin: 0;
     -webkit-animation: shake 600ms ease-in-out infinite alternate;
             animation: shake 600ms ease-in-out infinite alternate;
-    text-shadow: 0 0 0.07em #c414b5, -0.2em 0 2em rgba(132, 0, 103, 0.3), 0.2em 0 2em rgba(132, 0, 114, 0.3);
+    text-shadow: 0 0 0.07em #84000f, -0.2em 0 2em rgba(132, 0, 15, 0.3), 0.2em 0 2em rgba(132, 0, 15, 0.3);
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
@@ -140,25 +140,31 @@
   .error-body .message p, .error-body .message a {
     font-size: 2em;
     font-family: monospace;
-    text-shadow: 0 0 5px #5a0084;
+    text-shadow: 0 0 5px #84000f;
     -webkit-filter: blur(0.8px);
             filter: blur(0.8px);
   }
   .error-body .message a {
     position: relative;
-    color: #c414b5;;
+    color: #84000f;
     text-decoration: none;
     font-weight: 700;
-    border: 2px solid #c414b5;;
+    border: 2px solid #84000f;
     text-transform: uppercase;
     padding: 5px 30px;
-    box-shadow: inset 0 0 0 0 rgba(132, 0, 121, 0.2);
+    box-shadow: inset 0 0 0 0 rgba(132, 0, 15, 0.2);
     transition: 25ms ease-in-out all 0ms;
     overflow: hidden;
     -webkit-animation: attn 3s ease-in-out infinite;
             animation: attn 3s ease-in-out infinite;
   }
-
+  .error-body .message a:hover {
+    cursor: crosshair;
+    box-shadow: inset 0 -2em 0 0 rgba(132, 0, 15, 0.2);
+    transition: 225ms ease-in-out all 225ms;
+    -webkit-animation: none;
+            animation: none;
+  }
   .error-body .message a:hover:before, .error-body .message a:hover:after {
     -webkit-transform: translate(-50%, 0) scale(0, 1);
             transform: translate(-50%, 0) scale(0, 1);
@@ -175,7 +181,7 @@
             transform: translate(-50%, 0) scale(1, 1);
     -webkit-transform-origin: center;
             transform-origin: center;
-    background-color: #c414b5;
+    background-color: black;
     width: 90%;
     height: 5px;
     transition: 225ms ease-in-out all;
@@ -406,7 +412,7 @@
   	<div class="message">
   		<h1 t="404">re:Live</h1>
   		<div class="bottom">
-  			<p>you have lost your way</p>
+  			<p>You have lost your way</p>
   			<a href="https://relivesight.com/">return</a>
   		</div>
   	</div>
