--- a/re/side.html
+++ b/re/side.html
@@ -2,8 +2,7 @@
   <head>
       </head><body>
 <h1 style="margin-bottom:4px;">RE:LIVE</h1>
-<a>--------------</a>
-<a href="https://relivesight.com/">Home</a>
+<a href="https://relivesight.com/">--------------</a>
 <a href="https://relivesight.com/personal/">Personal Logs</a>
 <ul>
 <li><a href="https://relivesight.com/blog/">blog</a></li>
