--- a/projects/index.html
+++ b/projects/index.html
@@ -64,6 +64,25 @@
 										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
 								</div>
 						</div>
+
+
+
+						<div id="content">
+							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/videodeck/0.png" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">Video Deck</h3>
+							<p>12/30/20</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								a video editing deck to hopefully help me be more productive in after effects, using a teensy lc, keyboard switches, 
+								and some encoders
+								<li class='rr'>Status: [Completed]</li></ol>
+								<div class="label">
+								<p><a href="/projects/videodeck">Read More</a></p>
+							</div>
+						</div>		
+
+
+
 						<div id="content">
 							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/16.png" style="width: 250px;"/>
 							<h3 style="float: right; right: 4px;">PortaVoltex</h3>
