--- a/projects/index.html
+++ b/projects/index.html
@@ -53,11 +53,11 @@
             </p>
 			<p>--Ongoing projects are being logged at the <a href="https://relivesight.com/ongoing">Ongoing Projects Page</a></p>
             <p>
-                most of these are going to be incomplete, ugly, and dumb. but pr*ct*ce m*kes p*rfect amirite.
+                most of these are going to be incomplete, ugly, and dumb. but pr*ct*ce m*kes p*rfect so they say.
 								stars, too, have their own beginnings, but their own power results in their destruction.
 								also alot of the farther down logs (besides the very first (real) one) will just be picture showcases as i can't be bothered to write 25+ logs retro-actively
 			</p>
-			<p>note: only the ones denoted with [read more] have any helpful information, [look more] means jus sum pics</p>
+			<p>note: only the ones denoted with [read more] have any helpful information, [look more] means just sum pics</p>
         </div>
 				<div id="content2">
 								<div class="label2">
