--- a/projects/index.html
+++ b/projects/index.html
@@ -66,6 +66,19 @@
 						</div>
 
 
+						<div id="content">
+							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/0.png" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">Merged Dactyl</h3>
+							<p>1/1/21</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								merging a dactyl so i can use a teensy and not ever have to think about programming a split in qmk, ft. marble filament keycaps
+								<li class='rr'>Status: [Completed]</li></ol>
+									<div class="label">
+								<p><a href="/projects/mergeddactyl">Read More</a></p>
+							</div>
+						</div>		
+
 
 						<div id="content">
 							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/videodeck/0.png" style="width: 250px;"/>
