--- a/projects/mergeddactyl/index.html
+++ b/projects/mergeddactyl/index.html
@@ -37,7 +37,7 @@
               if you want to build this, the files are: <a target="_blank" href=" https://www.thingiverse.com/thing:4706102/">here</a>,
               you'll need 4.1mm m3 threaded inserts (and fitting screws), and like half a kg to print all those supports.
             </p>
-              <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+              <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
         
               <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mergeddactyl/11.jpg" width="500px">
         
@@ -126,7 +126,7 @@
 
 
 <br>
-   <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+   <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
    <p>┈ ren ​♡</p>
 
 
