--- a/projects/portavoltex/index.html
+++ b/projects/portavoltex/index.html
@@ -38,7 +38,7 @@
               its not perfect. well at least it's not as loud or clunky as a regular one... but that one at least had lights
 							
             </p>
-              <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+              <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
         
               <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/9.jpeg" width="500px">
             <h1>Overview</h1>
@@ -404,7 +404,7 @@
               <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/9.jpeg" width="500px">
               <p>thanks for reading if you did <3</p>
                            <br>
-   <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
+   <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
    <p>┈ ren ​♡</p>
 
 
