--- a/highlights/index.html
+++ b/highlights/index.html
@@ -56,6 +56,8 @@
       </p>
       <ul>
           <li><a href="https://relivesight.com/projects/433/" target="_blank">433% keyboard</a> - possibly the largest keyboard built by one person</li>
+          <li><a href="https://relivesight.com/projects/portavoltex/" target="_blank">portavoltex</a> - portable sdvx controller</li>
+          <li><a href="https://relivesight.com/projects/portavoltex/" target="_blank">videodeck</a> - macro pad with encoders for video editing</li>
           <li><a href="https://relivesight.com/projects/arcade/" target="_blank">arcade controller</a> - a simple arcade controller i built to play tetris </li>
           <li><a href="https://relivesight.com/projects/mikuyboard/" target="_blank">mikuyboard</a> - a 128 keyboard covered in hastune miku stickers</li>
           <li><a href="https://relivesight.com/projects/quarandream/" target="_blank">quarandream</a> - my favorite split keyboard ive made</li>
@@ -66,7 +68,7 @@
           <li><a href="https://relivesight.com/video/" target="_blank">video</a> - a hub for all video projects ive done (not too many atm)</li>
           <li><a href="https://relivesight.com/manga/" target="_blank">manga</a> - a hub for the one scanlation i've done</li>
           <li><a href="https://relivesight.com/book/" target="_blank">book</a> - 1 million 'words' honestly just so i can say im a published author haha</li>
-          <li><a href="https://relivesight.com/concept/chat/" target="_blank">chat</a> - a hidden chat page to connect you to other re:live members anonymously / no one uses it</li>
+          <li><a href="https://relivesight.com/concept/chat/" target="_blank">chat</a> - a hidden chat page to connect you to other re:live members anonymously / no one uses it but im proud of it</li>
         </ul><p>
         of course there is plenty more to explore, but i'll leave that too you if you are still interested<br>
      </p>
@@ -82,7 +84,7 @@
          <li><a href="https://www.speedrun.com/windosill/run/znko49lz" target="_blank">(sr) windosil - any% - 4:51:005</a> - 2nd place</li>
          <li><a href="https://www.speedrun.com/csgo/run/mrk4rq7y" target="_blank">(sr) cs:go - gun range - 64 tick, pp-bizon 0:25:600</a> - 20th place (my best of all cs categories)</li>
          <li><a href="https://www.speedrun.com/pp/run/yd5k6nvm" target="_blank">(sr) papers, please - ending 1 - 3:32:833</a> - 75th place</li>
-         <li><a href="https://youtu.be/Nmuk3yrkIno" target="_blank">my meme in lwaiy</a> - yes i'm sharing this cringe dont @</li>
+         <!--<li><a href="https://youtu.be/Nmuk3yrkIno" target="_blank">my meme in lwaiy</a> - yes i'm sharing this cringe dont @</li>-->
          <li><a href="https://open.spotify.com/track/2PQlEnb68MPekO0ysHNxjc?si=iHI8LATjS-SYSs-PlSscRg" target="_blank">omnisai - erratic noir</a> - released a 'song' on spotify as a joke </li>
        </ul>
 
