--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 	<div class="col-sm-12">
       <h1>『Re:Live Sight』</h1>
-      <p>no matter where you go, everyone's connected. welcome to my connection, please stop by the
-        <a href="/highlights/">highlights</a> page if you are new!</p>
+      <p>no matter where you go, everyone's connected. welcome to my connection, stop by the
+        <a href="/highlights/">highlights</a> page if you are new! or don't that's cool too┈</p>
     </div>
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>-->
