--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -112,12 +112,9 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>5</td><td>Tv</td><td class="a0">~</td><td>omg its so good so far</td></tr>       
-            <tr><td class="wat">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td>looks alright</td></tr>
-            <tr><td class="wat">Hisone to Maso-tan </td><td>2</td><td>Tv</td><td class="a0">~</td><td>cute so far</td></tr>
-            <tr><td class="wat">Koukaku Kidoutai: Stand Alone Complex </td><td>1</td><td>Tv</td><td class="a0">~</td><td>finally checking it out</td></tr>
-            <tr><td class="wat">Fire Force</td><td>1</td><td>Tv</td><td class="a0">~</td><td>alright so far</td></tr>
-            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>0</td><td>Tv</td><td class="a0">~</td><td>ill get around to it</td></tr>
+            <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>5</td><td>Tv</td><td class="a0">~</td><td>omg its so good so far</td></tr>
+            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>4</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
+            
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
@@ -167,7 +164,7 @@
             <tr><td class="cmp">Rascal Does Not Dream of Dreaming Girl</td><td>1</td><td>Film</td><td class="a7">7.4</td><td>dreams of dreaming girl</td></tr>
             <tr><td class="fav">Yakusoku no Neverland </td><td>12</td><td>Tv</td><td class="a7">7.4</td><td>a great introduction to a great manga</td></tr>
             <tr><td class="fav">Made in Abyss </td><td>13</td><td>Tv</td><td class="a7">7.4</td><td>great premise, excited for s2</td></tr>
-            <tr><td class="wat">Code Geass: Hangyaku no Lelouch </td><td>18</td><td>Tv</td><td class="a7">7.3</td><td>cool eye guy</td></tr>
+            <tr><td class="cmp">Code Geass: Hangyaku no Lelouch </td><td>24</td><td>Tv</td><td class="a7">7.3</td><td>cool eye guy</td></tr>
             <tr><td class="cmp">Boku Dake ga Inai Machi </td><td>12</td><td>Tv</td><td class="a7">7.2</td><td>totally shocking mystery</td></tr>
             <tr><td class="cmp">Steins;Gate: Kyoukaimenjou no Missing Link - Divide By Zero </td><td>1</td><td>Tv</td><td class="a7">7.1</td><td>steins;gate yes</td></tr>
             <tr><td class="fav">Mekakucity Actors </td><td>12</td><td>Tv</td><td class="a7">7.1</td><td>not good i just like kagepro</td></tr>
@@ -278,6 +275,8 @@
             <tr><td class="cmp">Sword Art Online II </td><td>24</td><td>Tv</td><td class="a2">2</td><td>the downfall begins</td></tr>
             <tr><td class="drp">Eromanga Sensei </td><td>2</td><td>Tv</td><td class="a1">0.1</td><td>the worst of the worst</td></tr>
          <tr><td class="drp">Nande Koko ni Sensei ga!? </td><td>1</td><td>Tv</td><td class="a1">0.1</td><td>why must i suffer</td></tr>
+         <tr><td class="pas">Koukaku Kidoutai: Stand Alone Complex </td><td>1</td><td>Tv</td><td class="a0">~</td><td>finally checking it out</td></tr>
+            <tr><td class="pas">Fire Force</td><td>1</td><td>Tv</td><td class="a0">~</td><td>alright so far</td></tr>
             <tr><td class="cmp">Steins;Gate: Soumei Eichi no Cognitive Computing </td><td>4</td><td>Tv</td><td class="a0">~</td><td>no rating cuz</td></tr>
             <tr><td class="cmp">Shingeki no Kyojin 3 Part 2 </td><td>10</td><td>Tv</td><td class="a0">~</td><td>extras</td></tr>
             <tr><td class="cmp">Shingeki! Kyojin Chuugakkou </td><td>12</td><td>Tv</td><td class="a0">~</td><td>extra extra</td></tr>
@@ -297,6 +296,8 @@
             <tr><td class="pas">Naruto </td><td>74</td><td>Tv</td><td class="a0">~</td><td>forever on pause but the chunin exams were awesome</td></tr>
             <tr><td class="pas">Persona 5 The Animation </td><td>1</td><td>Tv</td><td class="a0">~</td><td>im the joker baby</td></tr>
             <tr><td class="pas">Karakai Jouzu no Takagi-san </td><td>2</td><td>Tv</td><td class="a0">~</td><td>was okay i think?</td></tr>
+            <tr><td class="pas">Hisone to Maso-tan </td><td>2</td><td>Tv</td><td class="a0">~</td><td>cute so far</td></tr>
+            <tr><td class="pas">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td>looks alright</td></tr>
          <tr><td class="drp">Dororo </td><td>2</td><td>Tv</td><td class="a0">~</td><td>durororo?</td></tr>
          <tr><td class="drp">Soul Eater </td><td>1</td><td>Tv</td><td class="a0">~</td><td>nah</td></tr>
          <tr><td class="drp">Star Driver: Kagayaki no Takuto </td><td>4</td><td>Tv</td><td class="a0">~</td><td>boring</td></tr>
