--- a/projects/karambit/index.html
+++ b/projects/karambit/index.html
@@ -65,20 +65,20 @@
       <p>first i printed <a href="https://www.thingiverse.com/thing:324433" target="_blank">the Karambit</a>, and then i got to work</p>
       <p>
         now just wait an hour or so and viola~</p>
-        <p> <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/3.jpeg" width="500px"></p>
+        <p> <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/3.jpg" width="500px"></p>
      
       <p>now a quick shot to show you how much better it will hopefully be after its sanded and painted:</p>
-      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/1.jpeg" width="500px">
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/1.jpg" width="500px">
       </p><p>#uhoh #glhf </p>
       <p>an hour of drying later and:</p>
-      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/9.jpeg" width="500px">
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/9.jpg" width="500px">
       <p>honestly i probably shouldve left it here but i thought it would be best to try and paint the blade too, so here is how that went.<br>first coat:</p>
-      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/5.jpeg" width="500px">
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/5.jpg" width="500px">
 <p>yikes thats not so good, second coat:</p>
-        <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/6.jpeg" width="500px">
+        <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/6.jpg" width="500px">
 <p>well i guess it is a lil bit better, but its quite bumpy, i shouldve taken more time on the coats, and just had more. then i tried sanding to help it look better: </p>
 
-          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/8.jpeg" width="500px">
+          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/8.jpg" width="500px">
 <p>then i gave it a few more coats and it was done, simple as that. lets just say it is painted badly cuz it is 'well worn', anyway the final product:</p>
 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/karambit/2.png" width="500px">
 
