--- a/projects/manuform-003/index.html
+++ b/projects/manuform-003/index.html
@@ -47,8 +47,8 @@
              <p>rapid fire! beginnings: i 3d printed the custom case i generated from <a target="_blank" href="http://dactyl.siskam.link/">dactyl.siskam.link/</a>,
             i lubed a bunch of switches, took two arduino pro micros and wired it up, programmed it and flashed it. wow that covers it that didnt take too long, some pictures:</p>
            
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/Manuform-003/1.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/Manuform-003/2.jpeg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/Manuform-003/1.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/Manuform-003/2.jpg" width="500px">
            
             <p>i also added keycaps and the final firmware, but now for the problems:</p>
 
@@ -61,7 +61,7 @@
            <p> and those are the problems that persist to this day, next log should be mitaging those problems, but the board works for me for now, however unlike manuform-002 this one has
              a slot for an rj9 cable, which is already (mostly) wired, so the only real problem is figuring out the split wiring.
             </p>
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/Manuform-003/3.jpeg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/Manuform-003/3.jpg" width="500px">
 
 
 <br>
