--- a/projects/mikuyboard/index.html
+++ b/projects/mikuyboard/index.html
@@ -38,7 +38,7 @@
     </p>
       <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
 
-      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/1.jpeg" width="500px">
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/1.jpg" width="500px">
 
   
     
@@ -67,7 +67,7 @@
       <p>Fast forward nearly to present day. A couple weeks ago i decided it was about time i figured out how to program this board. I had just set up a 32bit windows system and was cautiously hopeful
         that the disc included with my purchase. Oh my naivety. I put in the disk.... and VIOLA~ cherry software:
       </p>
-      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/15.jpeg" width="500px">
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/15.jpg" width="500px">
       <p>yes yes yes! this looks good indeed, now i just need to- oh it wont upload the changed settings... hmmmmm. i had nearly given up, as i just couldn't seem to find what i needed. but alas i stumbled across a super helpful comment.
         <a href="https://www.reddit.com/user/InfernalRodent/" target="_blank">u/InfernalRodent</a> posted <a href="https://www.reddit.com/r/MechanicalKeyboards/comments/9iul6r/photos_finally_got_a_proper_set_of_caps_for_this/" target="_blank">this</a>
         which lead to a few breakthroughs! <br>mainly being:
@@ -87,7 +87,7 @@
       since bashing my head against the split keyboard wall didn't sound fun, i looked around to see if i had any other unfinished handwires. i opened up some of my drawers and saw it. the rc128bm- then it hit me!
       HANDWIRE☆OVER☆THE☆PCB. genius i know. what could go wrong right? 
     </p>
-    <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/11.jpeg" width="500px">
+    <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/11.jpg" width="500px">
 <p>10 hours and one Teensy 2.0++ later. ITS FINALLY DONE! time to program it. i open up <a href="https://kbfirmware.com/" target="_blank">kbfirmware.com</a> and make the layout. i flash the board and anxiously prepare to test it.
 </p>
 <p>i open up visual studio code. the blank blinking cursor stares directly into my soul. i feel a bead of sweat trickle down my face. "this is it." i thought and lowered my hand on the first key:
@@ -102,7 +102,7 @@ i put up an alright fight, but was bested in the end. i threw up a <a href="http
 <p>To my suprise, the post i made got comments of people encouraging me to destroy the pcb instead. The general consensus was to take a drill to the board, so i did that very thing.
   Let's just say enough hours passed for me to watch an entire season of a show, but alas i finished. 
 </p>
-<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/9.jpeg" width="500px">
+<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/9.jpg" width="500px">
 <p>
 After testing it, i logged all the not working keys and did some repairs.
 </p>
@@ -116,9 +116,9 @@ I was ecstatic that it was working, but i couldn't just put it back together all
 i opened my sticker bag and looked at what i had. ah yes, hatsune miku, perfect.
 at this point i had a great time wasting an hour putting stickers on this board.
 </p>
-<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/8.jpeg" width="500px">
+<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/8.jpg" width="500px">
 <p>now it just need some keycaps! lets say i had a little bit of trouble picking between black dsa, white dsa, dark grey dsa, light gray dsa, and 3d printed marble sa.</p>
-<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/7.jpeg" width="500px">
+<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/7.jpg" width="500px">
 
 <h1>Act 7: Finale!~</h1>
 <p>It was quite the journey but it was finally done! i didn't think i would've not only finished it, but also improved it.
@@ -132,9 +132,9 @@ at this point i had a great time wasting an hour putting stickers on this board.
   i'm very happy to have this board, even though it wont be my main, i'll try and put it to good use. that or it'll become a big macro board for my main setup. Thanks for following my lengthy journey.
   Yours truly will now take his leave. Enjoy some poorly taken pics:
 </p>
-<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/3.jpeg" width="500px">
-<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/4.jpeg" width="500px">
-<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/1.jpeg" width="500px">
+<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/3.jpg" width="500px">
+<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/4.jpg" width="500px">
+<img src="https://vibrant-hodgkin-c6365a.netlify.app/project/mikuyboard/1.jpg" width="500px">
 
 
 <br>
