--- a/projects/portavoltex/index.html
+++ b/projects/portavoltex/index.html
@@ -40,7 +40,7 @@
             </p>
               <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
         
-              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/9.jpeg" width="500px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/9.jpg" width="500px">
             <h1>Overview</h1>
             <p>normally these just track the process of me learning, but this one is so long and convaluded, here is a quick overview in case you want to
               make this yourself. this is a mini version of one of these controllers:
@@ -120,7 +120,7 @@
                            </code>
                            </pre>
               <p>and after i wired it up (with a nano for testing), it worked perfectly:</p>
-              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/1.jpeg" width="500px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/1.jpg" width="500px">
               <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/2.png" width="500px">
 
               <p>so seeing that it works, i guess 3d modelling is the next important step, so should probably start brainstorming that.
@@ -249,19 +249,19 @@
                the moment of truth came, time to test how the pieces fit: 
              </p>
              
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/2.jpeg" width="300px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/3.jpeg" width="300px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/2.jpg" width="300px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/3.jpg" width="300px">
              <p>and these fit perfectly! but sadly the arduino did not fit perfectly, however i did not reprint it cuz i was able to jam it in,
                but the final model will include an adjusted version. i do not have access to an area to paint the case at the moment (its -5°F outside right now),
                so i did the next best thing, went into photoshop and designed a sticker (here is the exact file i printed, designed for a 8.5x11in of paper):
              </p>
              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/sticker.png" width="500px">
              <p>and an exacto knife and like 10 minutes resulted in:</p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/5.jpeg" width="500px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/5.jpg" width="500px">
              <p>with it having a slightly more appealling look now, it is about time to wire it up. i first wired up the optical encoders,
                because i have the least experience with those, and wanted to make sure it worked. 
              </p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/7.jpeg" width="500px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/7.jpg" width="500px">
              <p>after flashing a slightly changed version of the code from earlier, it did not work at all. after a bit of panicking
                i concluded that i 'bricked' the arduino some how and soldered and flashed a new one. after alot of frustration i found this helpful comment online:
              </p>
@@ -270,7 +270,7 @@
                caused the arduino to get stuck??? so after shorting it (twice in succession) and reflashing it (with better code) i got it to work again, phew.
                then i wired up the keyboard matrix:
              </p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/8.jpeg" width="400px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/8.jpg" width="400px">
              <p>and proceeded to get increasingly frustrated with the matrix code. after successfully proving that each key works,
                i needed to get them to send keystrokes. my code became a jumbled mess of combining things i had found, full of test serial print
                statements and things i didn't think i needed but taking them out made it break. sadly i haven't fully gotten the code how i want it,
@@ -401,7 +401,7 @@
                        </code>
                        </pre>
               <p>then i just had to design some knobs, (took 4 tries to get the tolerances right), and it is all done:</p>
-              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/9.jpeg" width="500px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/portavoltex/9.jpg" width="500px">
               <p>thanks for reading if you did <3</p>
                            <br>
    <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
