--- a/projects/xbohotas/index.html
+++ b/projects/xbohotas/index.html
@@ -45,13 +45,13 @@
              <p>the log title is a reference to the fact that the pictures are poor and the right hand joystick is complete.
                printing the pieces actually took two tries cuz the tolereances were off on some of the parts:
              </p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/xbohotas/1.jpeg" width="500px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/xbohotas/1.jpg" width="500px">
              <p>i wish i could say putting the piece together was easy but it wasn't, i had to use a a a a a thing, a tool for people that know the name of
                tools and such. it leveraged my weak hands to push the pieces together better than i could so thanks mystery tool. 
              </p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/xbohotas/2.jpeg" width="500px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/xbohotas/2.jpg" width="500px">
              <p>then i smacked it against the xbox one controller than i definitely use and ta daa, its so fun to mess around with: </p>
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/xbohotas/5.jpeg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/xbohotas/5.jpg" width="500px">
              <p>now just gotta wait for the throttle to print, and im low on my filament roll, so wish me the best of luck!~
              </p>
 
