--- a/projects/arcade/index.html
+++ b/projects/arcade/index.html
@@ -37,21 +37,21 @@
             </p>
             <p><a target="_blank" href="https://www.reddit.com/r/3Dprinting/comments/j84jgh/arcade_joystick/">reddit post</a> <3</p>
               <p><a id="back" href="https://relivesight.com/projects">back a page</a></p>
-              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/8.jpeg" width="500px">
+              <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/8.jpg" width="500px">
            
             
               <h1>Log 1: Nostalgia for Something I Never Had</h1>
              <p>printed the pieces from <a target="_blank" href="https://www.thingiverse.com/thing:2819864">here</a> in black pla,
             then sanded and painted the base with a coat of silver and plate with two coats of white primer.</p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/1.jpeg" width="300px">
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/2.jpeg" width="300px">
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/3.jpeg" width="300px">
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/4.jpeg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/1.jpg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/2.jpg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/3.jpg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/4.jpg" width="300px">
              <p>after that it was just wiring it up with the kit i had, nothing too complex. i bought the kit from <a target="_blank" href="https://www.amazon.com/gp/product/B079K6W848/ref=ppx_yo_dt_b_asin_title_o03_s00?ie=UTF8&psc=1">here</a> that i used for each one of my controllers.
             though the joystick doesn't technically fit, i used m3 screws and got it to stay and look acceptable.</p>
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/5.jpeg" width="300px">
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/6.jpeg" width="300px">
-             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/7.jpeg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/5.jpg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/6.jpg" width="300px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/arcade/7.jpg" width="300px">
               <p>everything feels good! buttons are a bit loud but it's fine with me as i always am blasting music through my headphones.
                 this one was built in one day once all parts were printed and shipped, a very contained/inexpensive project, so thats always good!
               </p>
