--- a/projects/laptopkeeb/index.html
+++ b/projects/laptopkeeb/index.html
@@ -47,8 +47,8 @@
               <a target="_blank" href="https://github.com/TeXitoi/keyberon-f4">keyberon-f4</a>, which has a good amount of keys and works with a teensy2.0++. i 3d printed and wired it pretty
               quickly, but im having some issues now, but first pictures:
              </p>
-                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/1.jpeg" width="500px">
-                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/2.jpeg" width="500px">
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/1.jpg" width="500px">
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/2.jpg" width="500px">
                 <p>now the issues. the case is just a tad too small for how thick the wires i put in are, so even before i design the clips i need to redesign the case.
                   that and i also don't have threaded inserts, so i need to design a case without threaded inserts. i have near no experience in fusion 360, so lets head over to the
                   <a href="https://relivesight.com/ongoing/3dmodel">3d modelling learning page</a>~
@@ -62,9 +62,9 @@
             i bought some <a target="_blank" href="https://www.amazon.com/gp/product/B01IYWTCWW/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">brass threaded inserts</a>
             for the holes and was amazed at how easy it was to install them. just a touch of the soldering iron and they melted right into the plastic:
           </p>
-          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/4.jpeg" width="500px">
+          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/4.jpg" width="500px">
           <p>so now i just used some m3 screws and keycaps and finished off the base keyboard:</p>
-          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/3.jpeg" width="500px">
+          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/3.jpg" width="500px">
           <p>i would love to be done now, but i ventured to make a keyboard that could clip onto a laptop, so i intend to complete that, wish me luck again~</p>
 
           <h1>Log 2: Clipping Out of Bounds</h1>
