--- a/projects/various/index.html
+++ b/projects/various/index.html
@@ -42,14 +42,14 @@
         
             
               <h1>Log 1: The One and Only</h1>
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/7.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/8.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/6.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/5.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/3.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/4.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/2.jpeg" width="500px">
-            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/1.jpeg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/7.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/8.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/6.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/5.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/3.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/4.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/2.jpg" width="500px">
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/various/1.jpg" width="500px">
 
 <br>
    <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
