--- a/mobile/index.html
+++ b/mobile/index.html
@@ -69,8 +69,8 @@
 	<div class="col-sm-12">
       <h1>『Re:Live Sight』</h1>
 
-      <p>this mobile site is a simplified version of the desktop, hopefully it functions enough. thanks for visiting! please stop by the
-        <a href="/highlights/">highlights</a> page if you are new!
+      <p>this mobile site is a somewhat simplified version of the desktop, hopefully it functions enough. thanks for visiting! stop by the
+        <a href="/highlights/">highlights</a> page if you are new! or don't that's cool too┈
       </p>
     </div>
     <div class="col-sm-12">
