--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -113,8 +113,10 @@
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
             <tr><td class="wat">Shingeki no Kyoujin: Final Season</td><td>6</td><td>Tv</td><td class="a0">~</td><td>omg its so good so far</td></tr>
-            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>13</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
+            <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>16</td><td>Tv</td><td class="a0">~</td><td>finally watching it</td></tr>         
+            <tr><td class="wat">Princess Jellyfish</td><td>3</td><td>Tv</td><td class="a0">~</td><td>intentional crossdressing?!</td></tr>         
             
+
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
             <tr><td class="fav">Shigatsu wa Kimi no Uso</td><td>22</td><td>Tv</td><td class="a9">9.6</td><td>wanna cry?</td></tr>
             <tr><td class="fav">Steins;Gate </td><td>24</td><td>Tv</td><td class="a9">9.6</td><td>haAcking to the gate!</td></tr>
